lab1/Test/L1-A-10-73.cmm
struct GflXuQtcMwMjPIVxa0u {
  int zcMIv6MVDi9Yg5XYxS , gHrx888UC7ZwxYYNUQ = YDEG3Mt 
    ;
[ };
int ;
struct {
  struct GhjHeerBOZRK1OWWix QufE074_c ;
}eH7hrygWu2 , MoLRBHMvc 

;
int ;
int n ( struct F_7m NUzFMOFXtHTBb0VnEn [ 224878528 
  ] , float v ) {
  if ( nlQb8iHju )   pNSzF1 = aXXSXvVDD || ds != fC6Z1r 
    - - Q54G3vod ( N6YGc67Gx_hUtXZsM , e6vrzvWWIueApYB 
    && M <= P39RPh / A [ nuAKSwjCwDEoS4G9QCx || Quo3vlBnDha1QLNompJ 
    && qco4yeOxuMHGlhb > ( E2zvg8BmUcSWz89b && XcNsFdajJNUxzXs 
    == w9vC7Kbylyw * ( zXnNy6PSau >= WicxwE3uuf4er5CS 
    + w5_cyo0WPT1HT / ( bc6T || xVQN30g / - - - ( QtTFh_xWf 
    < L3lqA1mVBjhCvPP ) ) . HRHCCGuScPEg #) - - GppbXw0TaUcEa3uA 
    * ! ! ! KxiX69TApBP3rqAPy94 . XNwRKCNDkQ0eLw0q1 ) 
    . ukZnUV1UrkCbkBt / 880735107.928260910 + WLCm_ ( 
    ) ] . ZVc3C5IuMNZES ) * ! 114625709 ;

}
int S ( ) {
  BDEoI2gvSFTwDmNctp 558298595 ;
  tOpuQpPl ;
  aYhoOaN1Eo0 ;
{
    if ( dRCBnbEIeYKy )     if ( TjqSZ980soQtxPy6bEk 
      )     vhyB9yO ;
else     while ( w2qvXQlk )     HFg1I2pPfb8oYDZd3 
      ;


else     if ( EH1nhyVy0ve0m07 )     if ( WLkx71T4NG2nDqz4b 
      )     return sq2zKT ;



  }else }
int AmB_bBhsf6sahbkDiBv ( ) {
}
int ;
